[gd_scene load_steps=2 format=3 uid="uid://00r5ulw3ajqw"]

[ext_resource type="Script" path="res://tests/maze_generator/maze_test.gd" id="1_tra4x"]

[node name="maze_test" type="Node2D"]
script = ExtResource("1_tra4x")

[node name="MazeNode" type="ColorRect" parent="."]
offset_top = -48.0
offset_right = 40.0
offset_bottom = -8.0

[node name="X_passage" type="Line2D" parent="MazeNode"]
points = PackedVector2Array(40, 0, 40, 41)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="Y_passage" type="Line2D" parent="MazeNode"]
points = PackedVector2Array(0, 40, 41, 40)
width = 2.0
default_color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="MazeNode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 1018.0
offset_top = 8.0
offset_right = 1144.0
offset_bottom = 108.0

[node name="X" type="SpinBox" parent="Control"]
layout_mode = 0
offset_right = 83.0625
offset_bottom = 31.0
min_value = 1.0
value = 1.0

[node name="Y" type="SpinBox" parent="Control"]
layout_mode = 0
offset_top = 40.0
offset_right = 83.0625
offset_bottom = 71.0
min_value = 1.0
value = 1.0

[node name="Start" type="SpinBox" parent="Control"]
layout_mode = 0
offset_top = 80.0
offset_right = 83.0625
offset_bottom = 111.0
min_value = -1.0
max_value = 1e+11
value = -1.0

[node name="Go" type="Button" parent="Control"]
layout_mode = 0
offset_left = 88.0
offset_top = -1.0
offset_right = 126.0
offset_bottom = 112.0
text = "go"

[node name="Maze" type="Node2D" parent="."]

[connection signal="pressed" from="Control/Go" to="." method="_on_go_pressed"]
